# UFSC

./: .gitignore  Artigo _redes_1.tex  Banco.java  Camp.java  Cliente.java  ContaCorrente.java  DAProxy.h  DataAnalyserStudent.h  DuckAdapter.java  Field.java  Interface.java  Legendre.h  Main.cpp  Main.java  Map.java  Mouse.java  PDProxy.cpp  PessoaFisica.java  PessoaJuridica.java  ProbabilityDistributionStudent.h  README.md  ReadFile.java  Score.java  SolverProxy.cpp  SolverStudent.h  Solver_if.h  WriteFile.java  algorithm.py  analisador_lexico.py  analisador_sintatico.py  classifier.py  conf0.toml  conf1.toml  conf2.toml  conf_seq.toml  entrega1cg-2.ui  entrega1cg.py  entrega1cg.ui  exemplo  graphic.py  (+32 more)
Adapter/: WildTurkey.java
Banco/: ContaPoupanca.java  PessoaFisica.java
Exercicio-master/: main.java
Exercise/: operacao.java
FinalProject/: Score.java
INE5404/Adapter/: MallardDuck.java  TurkeyTestDrive.java
INE5404/Banco/: Agencia.java  Conta.java  Movimentacao.java
INE5404/Exercise/: Main.java
INE5404/FinalProject/: Field.java  Interface.java  Mouse.java
INE5414/: config  packed-refs
INE5418/: conf1.toml  process0.py  process0_ricart.py  process1.py  process2_broad.py  sequencer.py  test_causal.py
INE5420/: incluirobjeto.py  pyproject.toml  transformacoesobjeto.py  window.py
INE5420/geometry/: polygon.py  shapes.py  transformations.py
INE5420/ui_files/: incluirobjeto.ui  transformacoesobjeto.ui
INE5421/: analisador_lexico.py  analisador_sintatico.py  pyproject.toml  specs.toml  test_analisador_sintatico.py
INE5425/: DAProxy.cpp  DataAnalyserStudent.h  Legendre.h  PDProxy.cpp  PDProxy.h  ProbabilityDistributionBase.cpp  ProbabilityDistributionBase.h  SolverProxy.h  SolverStudent.h  Solver_if.h  test.cpp  test.h
INE5450/: license.sol
calculation/: polygon.py  transformations.py
common/: errors.py  notapolygon.py
geometry/: clip.py  polygon.py  shapes.py  transformations.py
ui_files/: entrega1cg-2.ui  entrega1cg.ui
(+50 files in other folders)
