[tool.poetry]
name = "trab"
version = "0.1.0"
description = ""
authors = ["Nicole Schmidt <nicoleschmidt2000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
