[tool.poetry]
name = "trabalho-formais"
version = "0.1.0"
description = "Trabalho de Formais CCO - 21.1"
authors = ["Nicole Schmidt <nicoleschmidt2000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
